--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ selenium = ">=4.21.0,<4.22.0"
 python-dotenv = ">=1.0.1,<1.1.0"
 requests = "^2.32.3"
 appium-python-client = "^4.1.0"
+jsonschema = "^4.23.0"
 
 
 [build-system]
